can I commit agian

--- a/results/code/ecoli/djFBA_constrained.ipynb
+++ b/results/code/ecoli/djFBA_constrained.ipynb
@@ -39,7 +39,9 @@
     "from ecoli_models import (\n",
     "    get_leucine_knock_out_model,\n",
     "    get_lysine_knock_out_model,\n",
-    ")"
+    ")\n",
+    "\n",
+    "#small change"
    ]
   },
   {
