--- a/results/code/ecoli/djFBA_constrained.ipynb
+++ b/results/code/ecoli/djFBA_constrained.ipynb
@@ -17,15 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Attempting to load SBML file: ../../input/iAF1260.xml\n",
+      "SBML Level 3 FBC version 2 model detected, loading with cbmpy.readSBML3FBC()\n",
+      "FBC version: 2\n",
+      "M.getNumReactions: 2382\n",
+      "M.getNumSpecies: 1668\n",
+      "FBC.getNumObjectives: 1\n",
+      "FBC.getNumParameters: 8\n",
+      "FBC.getNumGeneProducts: 1261\n",
+      "Zero dimension compartment detected: c\n",
+      "Zero dimension compartment detected: p\n",
+      "Zero dimension compartment detected: e\n",
+      "FluxBounds process1: 0.03\n",
+      "INFO: Active objective: obj\n",
+      "Adding objective: obj\n",
+      "FluxBounds process2: 0.105\n",
+      "\n",
+      "SBML3 load time: 3.397\n",
+      "\n"
      ]
     }
    ],
@@ -24880,7 +24896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24890,12 +24906,12 @@
     "# import pickle\n",
     "\n",
     "# with open(\"../../output/djFBA/release/constrained_model.pkl\", \"rb\") as file:\n",
-    "#     dj_release_test = pickle.load(file)\n"
+    "#     dj_release = pickle.load(file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24913,7 +24929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -25109,7 +25125,7 @@
     "ls3 = dj_release.get_flux_values(\"R_EX_val__L_e\")\n",
     "plt.plot(time_points[:-1], ls3, color=\"blue\", label=f\"R_EX_val__L_e\")\n",
     "plt.xlabel(\"Time [h]\")\n",
-    "plt.ylabel(r'Flux [$mmol * h^{-1}$]')\n",
+    "plt.ylabel(r'Flux [$mmol * gDw^{-1} h^{-1}$]')\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
@@ -25123,18 +25139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x31c570cd0>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.17112259866173937\n"
+     ]
     },
     {
      "data": {
@@ -25156,7 +25169,9 @@
     "plt.plot(time_points[:-1], [sum(fls)/ len(fls)] * len(fls), color=f\"C19\", label=f\"Average community growth rate\")\n",
     "plt.xlabel(\"Time [h]\")\n",
     "plt.ylabel(r'Growth rate [h^{-1}$]')\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "\n",
+    "print(sum(fls)/ len(fls))"
    ]
   },
   {
@@ -25168,7 +25183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
